--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
 	// Other dependencies.
 	modImplementation "maven.modrinth:dye-depot:1.0.3-fabric"
+	modImplementation "maven.modrinth:built:1.2.0-fabric"
 	
 }
 
