--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	// Other dependencies.
 	modImplementation "maven.modrinth:dye-depot:1.0.3-fabric"
 	modImplementation "maven.modrinth:another-furniture:3.0.1-fabric"
+	modImplementation "maven.modrinth:comforts:6.4.0+1.20.1-fabric"
 	
 }
 
